kubernetes/apps/home-automation/qbittorrentvpn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrentvpn
  labels:
    app: qbittorrentvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrentvpn
  template:
    metadata:
      labels:
        app: qbittorrentvpn
    spec:
      containers:
        - name: qbittorrentvpn
          image: binhex/arch-qbittorrentvpn:latest

          securityContext:
            privileged: true

          ports:
            - containerPort: 8080
              name: web-ui
            - containerPort: 8118
              name: privoxy
            - containerPort: 9118
            - containerPort: 58946

          resources:
            limits:
              memory: 8Gi
              cpu: 500m
            requests:
              memory: 2Gi
              cpu: 300m

          volumeMounts:
            - name: homelab-storage
              mountPath: /config
              subPath: qbittorrent/config
            - name: homelab-storage
              mountPath: /torrents
              subPath: streaming/torrents
            - name: homelab-storage
              mountPath: /media
              subPath: streaming/media
            - name: ovpn
              mountPath: /config/openvpn

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
        - name: ovpn
          secret:
            secretName: protonvpn-ovpn
