kubernetes/apps/home-automation/qbittorrentvpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrentvpn

spec:
  selector:
    app: qbittorrentvpn

  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: privoxy
      port: 8118
      targetPort: 8118
    - name: privoxy-tcp
      port: 9118
      targetPort: 9118
    - name: daemon
      port: 6881
      targetPort: 6881
    - name: incoming
      port: 6881
      targetPort: 6881
