kubernetes/apps/home-automation/qbittorrentvpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrentvpn
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-production"

spec:
  ingressClassName: external
  rules:
    - host: qbittorrent.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrentvpn
                port:
                  number: 8080
  tls:
    - hosts:
        - qbittorrent.rutberg.dev
      secretName: qbittorrentvpn-tls
